--- a/index.html
+++ b/index.html
@@ -1,245 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>High Choice — Premium Watches</title>
-  <meta name="description" content="High Choice – handpicked luxury watches. WhatsApp: +91 7869288078" />
-  <link rel="icon" href="favicon.png" />
-  <style>
-    :root{
-      --bg:#040404; --panel:#0f0f0f; --muted:#bfbfbf; --gold:#d4af37;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;
-      font-family:Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-      background:linear-gradient(180deg,var(--bg),#070707);
-      color:#eee;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-    }
-    .container{max-width:1200px;margin:0 auto;padding:20px;}
-
-    /* Header */
-    header{display:flex;align-items:center;justify-content:space-between;padding:18px 0}
-    .brand{display:flex;gap:12px;align-items:center}
-    .brand img{width:56px;height:56px;object-fit:cover;border-radius:8px;display:block}
-    .brand h1{margin:0;font-size:18px;color:var(--gold);letter-spacing:0.6px}
-    nav{display:flex;gap:14px;align-items:center}
-    nav a{color:var(--muted);text-decoration:none;padding:8px 12px;border-radius:8px;font-size:14px}
-    .btn-wa{background:linear-gradient(90deg,var(--gold),#f7e27d);color:#000;padding:8px 12px;border-radius:8px;font-weight:700;text-decoration:none}
-
-    /* Hero */
-    .hero{display:grid;grid-template-columns:1fr 480px;gap:28px;align-items:center;margin-top:18px}
-    .hero .eyebrow{color:var(--muted);text-transform:uppercase;font-weight:700;font-size:12px;margin-bottom:10px}
-    .hero h2{font-size:36px;line-height:1.02;margin:0 0 12px;font-weight:800}
-    .hero p{color:var(--muted);margin-bottom:20px;max-width:560px}
-    .hero .actions{display:flex;gap:12px}
-
-    /* Featured (video) */
-    .stage{height:420px;border-radius:18px;overflow:hidden;display:flex;align-items:center;justify-content:center;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);border:1px solid rgba(255,255,255,0.03)}
-    .featured-card{width:360px;height:360px;border-radius:16px;overflow:hidden;display:flex;align-items:center;justify-content:center;background:#000;position:relative;transform-style:preserve-3d;transition:transform .18s ease}
-    .featured-card video, .featured-card img{width:100%;height:100%;object-fit:cover;display:block}
-    .featured-badge{position:absolute;left:16px;top:16px;background:rgba(0,0,0,0.5);padding:8px 12px;border-radius:12px;color:#fff;font-weight:700;border:1px solid rgba(255,255,255,0.04)}
-
-    /* Products grid */
-    .section{margin-top:40px}
-    .section h3{margin:0 0 12px;font-size:20px}
-    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
-    .card{background:var(--panel);padding:12px;border-radius:12px;border:1px solid rgba(255,255,255,0.03);transition:transform .25s ease,box-shadow .25s ease}
-    .card:hover{transform:translateY(-8px);box-shadow:0 18px 40px rgba(0,0,0,0.6)}
-    .thumb{height:220px;border-radius:10px;overflow:hidden;background:#070707;display:flex;align-items:center;justify-content:center}
-    .thumb img{width:100%;height:100%;object-fit:cover}
-    .meta{padding:10px}
-    .meta h4{margin:0;font-size:16px}
-    .meta p{color:var(--muted);font-size:13px;margin:6px 0}
-    .price{color:var(--gold);font-weight:800;font-size:18px}
-
-    /* Footer & contact */
-    .contact{margin-top:30px;padding:18px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.01),transparent);border:1px solid rgba(255,255,255,0.02);display:flex;align-items:center;justify-content:space-between;gap:12px}
-    .contact p{margin:0;color:var(--muted)}
-    footer{margin-top:28px;text-align:center;color:var(--muted);font-size:13px}
-
-    /* Floating WA */
-    .wa-float{position:fixed;right:18px;bottom:18px;background:linear-gradient(180deg,#25d366,#128c7e);padding:12px 14px;border-radius:999px;color:#fff;font-weight:700;z-index:60;box-shadow:0 18px 40px rgba(0,0,0,0.5)}
-
-    /* Responsive */
-    @media (max-width:1000px){.hero{grid-template-columns:1fr 360px}.grid{grid-template-columns:repeat(2,1fr)}}
-    @media (max-width:720px){.hero{grid-template-columns:1fr}.stage{height:320px}.grid{grid-template-columns:1fr}}
-  </style>
+<meta charset="UTF-8">
+<title>High Choice – Premium Watches</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<style>
+body { margin: 0; background: #000; font-family: Poppins, sans-serif; color: #fff; }
+.header { padding: 20px; text-align: center; font-size: 28px; font-weight: 700; color: gold; }
+.grid { display: grid; grid-template-columns: repeat(2,1fr); gap: 15px; padding: 20px; }
+.card { background: #111; border-radius: 12px; padding: 10px; text-align: center; transition: 0.3s; }
+.card:hover { transform: scale(1.06); box-shadow: 0 0 20px gold; }
+.card img { width: 100%; border-radius: 10px; }
+.card h3 { margin-top: 10px; font-size: 16px; }
+a { color: inherit; text-decoration: none; }
+</style>
 </head>
+
 <body>
-  <div class="container">
 
-    <!-- header -->
-    <header>
-      <div class="brand">
-        <img src="logo.png" alt="High Choice logo" onerror="this.style.display='none'">
-        <div>
-          <h1>High Choice</h1>
-          <div style="color:var(--muted);font-size:12px">Premium Original Watches</div>
-        </div>
-      </div>
+<div class="header">HIGH CHOICE – PREMIUM WATCHES</div>
 
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#products">Watches</a>
-        <a href="#about">About</a>
-        <a class="btn-wa" href="https://wa.me/917869288078" target="_blank">WhatsApp</a>
-      </nav>
-    </header>
+<div class="grid">
 
-    <!-- hero -->
-    <main id="home" class="hero">
-      <div>
-        <div class="eyebrow">Limited Curations</div>
-        <h2>Original Luxury Timepieces<br><span style="color:var(--gold)">Handpicked • Verified • Warranty</span></h2>
-        <p>High Choice sources authenticated original watches — showroom quality, verified documentation, and white-glove aftercare.</p>
-
-        <div class="actions" style="margin-top:18px">
-          <a class="btn-wa" href="#products" style="text-decoration:none;margin-right:8px">Shop Collection</a>
-          <a href="https://wa.me/917869288078" class="btn-wa" style="background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);text-decoration:none">Book via WhatsApp</a>
-        </div>
-
-        <div style="margin-top:12px;color:var(--muted);font-size:13px">Call/WhatsApp: <strong>+91 7869288078</strong></div>
-      </div>
-
-      <div class="stage glass">
-        <div class="featured-badge">Featured</div>
-        <div id="featuredCard" class="featured-card" aria-hidden="false">
-          <!-- Video mockup: Featured1.mp4 (autoplay muted loop). Fallback to image if video not found. -->
-          <video id="featuredVideo" autoplay muted loop playsinline poster="watch1.jpg" style="display:block">
-            <source src="Featured1.mp4" type="video/mp4">
-            <!-- fallback image -->
-            <img src="watch1.jpg" alt="Featured watch">
-          </video>
-        </div>
-      </div>
-    </main>
-
-    <!-- Featured Watches -->
-    <section id="products" class="section">
-      <div style="display:flex;align-items:center;justify-content:space-between;margin-bottom:12px">
-        <h3>Featured Watches</h3>
-        <div style="color:var(--muted)">Prices: ₹2,500 — ₹4,500</div>
-      </div>
-
-      <div class="grid" id="grid">
-        <!-- Product 1 -->
-        <article class="card">
-          <div class="thumb"><img src="watch1.jpg" alt="Rolex Submariner"></div>
-          <div class="meta">
-            <h4>Rolex Submariner</h4>
-            <p>Original • Automatic • Verified</p>
-            <div style="display:flex;align-items:center;justify-content:space-between;margin-top:10px">
-              <div class="price">₹ 4,499</div>
-              <div style="display:flex;gap:8px">
-                <a class="btn-wa" href="https://wa.me/917869288078?text=I%20want%20Rolex%20Submariner">Buy</a>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <!-- Product 2 -->
-        <article class="card">
-          <div class="thumb"><img src="watch2.jpg" alt="Rado Captain Cook"></div>
-          <div class="meta">
-            <h4>Rado Captain Cook</h4>
-            <p>Original • Sapphire • Polished</p>
-            <div style="display:flex;align-items:center;justify-content:space-between;margin-top:10px">
-              <div class="price">₹ 2,999</div>
-              <div><a class="btn-wa" href="https://wa.me/917869288078?text=I%20want%20Rado%20Captain%20Cook">Buy</a></div>
-            </div>
-          </div>
-        </article>
-
-        <!-- Product 3 -->
-        <article class="card">
-          <div class="thumb"><img src="watch3.jpg" alt="Omega Seamaster"></div>
-          <div class="meta">
-            <h4>Omega Seamaster</h4>
-            <p>Original • Diver Edition</p>
-            <div style="display:flex;align-items:center;justify-content:space-between;margin-top:10px">
-              <div class="price">₹ 3,499</div>
-              <div><a class="btn-wa" href="https://wa.me/917869288078?text=I%20want%20Omega%20Seamaster">Buy</a></div>
-            </div>
-          </div>
-        </article>
-
-        <!-- Product 4 -->
-        <article class="card">
-          <div class="thumb"><img src="watch4.jpg" alt="Tag Heuer Carrera"></div>
-          <div class="meta">
-            <h4>Tag Heuer Carrera</h4>
-            <p>Original • Chronograph</p>
-            <div style="display:flex;align-items:center;justify-content:space-between;margin-top:10px">
-              <div class="price">₹ 3,999</div>
-              <div><a class="btn-wa" href="https://wa.me/917869288078?text=I%20want%20Tag%20Heuer%20Carrera">Buy</a></div>
-            </div>
-          </div>
-        </article>
-
-      </div>
-    </section>
-
-    <!-- contact -->
-    <div class="contact">
-      <div>
-        <strong>Contact & Appointments</strong>
-        <p style="margin:6px 0 0;color:var(--muted)">Book showroom visits, request authentication reports or chat on WhatsApp for fast assistance.</p>
-      </div>
-      <div style="display:flex;gap:10px;align-items:center">
-        <a class="btn-wa" href="https://wa.me/917869288078">Chat on WhatsApp</a>
-        <a href="tel:+917869288078" style="padding:8px 12px;border:1px solid rgba(255,255,255,0.06);border-radius:8px;color:var(--muted);text-decoration:none">Call</a>
-      </div>
-    </div>
-
-    <footer>
-      © <span id="yr"></span> High Choice • All Rights Reserved
-    </footer>
-
-    <!-- small WA float -->
-    <a class="wa-float" href="https://wa.me/917869288078" target="_blank">Chat</a>
+<!-- Rolex Example -->
+<a onclick="openProduct('rolex_submariner')">
+  <div class="card">
+    <img src="images/rolex1.png">
+    <h3>Rolex Submariner</h3>
   </div>
+</a>
 
-  <script>
-    document.getElementById('yr').textContent = new Date().getFullYear();
+<!-- G-Shock Example -->
+<a onclick="openProduct('gshock_ga2100')">
+  <div class="card">
+    <img src="images/gshock1.png">
+    <h3>G-Shock GA2100</h3>
+  </div>
+</a>
 
-    // featured card tilt (mouse & touch)
-    (function(){
-      const card = document.getElementById('featuredCard');
-      if(!card) return;
-      function setTransform(x,y){
-        const rx = (-y/20).toFixed(2);
-        const ry = (x/20).toFixed(2);
-        card.style.transform = `perspective(900px) rotateX(${rx}deg) rotateY(${ry}deg)`;
-      }
-      card.addEventListener('mousemove', e=>{
-        const r = card.getBoundingClientRect();
-        setTransform(e.clientX - (r.left + r.width/2), e.clientY - (r.top + r.height/2));
-      });
-      card.addEventListener('mouseleave', ()=> card.style.transform = 'perspective(900px) rotateX(0deg) rotateY(0deg)');
-      // touch
-      card.addEventListener('touchmove', e=>{
-        const t = e.touches[0];
-        const r = card.getBoundingClientRect();
-        setTransform(t.clientX - (r.left + r.width/2), t.clientY - (r.top + r.height/2));
-      });
-      card.addEventListener('touchend', ()=> card.style.transform = 'perspective(900px) rotateX(0deg) rotateY(0deg)');
-    })();
+<!-- Omega Example -->
+<a onclick="openProduct('omega_speedmaster')">
+  <div class="card">
+    <img src="images/omega1.png">
+    <h3>Omega Speedmaster</h3>
+  </div>
+</a>
 
-    // try to autoplay video; if not found, keep poster
-    (function(){
-      const v = document.getElementById('featuredVideo');
-      if(!v) return;
-      v.addEventListener('error', ()=> {
-        // video missing or blocked — fallback already present (img tag)
-        console.warn('Featured video not available or blocked.');
-      });
-      // some browsers restrict autoplay unless muted — video is muted so should play
-      v.play().catch(()=>{/* ignore */});
-    })();
-  </script>
+<!-- Add more products same way -->
+
+</div>
+
+<script>
+// Supabase init
+const supabaseUrl = "https://vkapzhbghyjzhscxsxnh.supabase.co";
+const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZrYXB6aGJnaHlqemhzY3hzeG5oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5ODQ0MjgsImV4cCI6MjA4MDU2MDQyOH0.izm4PRrrRS7cVsP7KCQIXls12QuzBb8YCCNtKLYDIak";
+
+const sb = supabase.createClient(supabaseUrl, supabaseKey);
+
+// openProduct → product.html + product ID
+function openProduct(pid) {
+  localStorage.setItem("product_id", pid);
+  window.location = "product.html";
+}
+</script>
+
 </body>
 </html>
