--- a/index.html
+++ b/index.html
@@ -1,69 +1,360 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>High Choice – Premium Watches</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<style>
-body { margin: 0; background: #000; font-family: Poppins, sans-serif; color: #fff; }
-.header { padding: 20px; text-align: center; font-size: 28px; font-weight: 700; color: gold; }
-.grid { display: grid; grid-template-columns: repeat(2,1fr); gap: 15px; padding: 20px; }
-.card { background: #111; border-radius: 12px; padding: 10px; text-align: center; transition: 0.3s; }
-.card:hover { transform: scale(1.06); box-shadow: 0 0 20px gold; }
-.card img { width: 100%; border-radius: 10px; }
-.card h3 { margin-top: 10px; font-size: 16px; }
-a { color: inherit; text-decoration: none; }
-</style>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>High Choice — Luxury Timepieces</title>
+  <style>
+    :root{
+      --bg:#0b0b0d; --card:#121214; --border:#2a2a2e; --text:#f6f6f6; --muted:#a3a3a3;
+      --gold:#d1b97a; --accent:#4ef0e4; --ok:#25D366;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;background:var(--bg);color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Arial}
+    .container{max-width:1100px;margin:0 auto;padding:16px}
+    a{text-decoration:none;color:inherit;transition:.2s}
+    a:hover{color:var(--gold)}
+    header{border-bottom:1px solid var(--border);position:sticky;top:0;background:rgba(11,11,13,.85);backdrop-filter:saturate(120%) blur(8px);z-index:20}
+    .brand{display:flex;justify-content:space-between;align-items:center;gap:12px}
+    .brand h1{margin:0;color:var(--gold);font-size:1.4rem;font-weight:600}
+    nav{display:flex;gap:12px;font-size:.95rem;color:var(--muted);flex-wrap:wrap}
+    .tabs{display:flex;gap:8px;margin-top:10px;flex-wrap:wrap}
+    .tab{border:1px solid var(--border);padding:8px 12px;border-radius:999px;color:var(--muted);cursor:pointer}
+    .tab.active{border-color:#d1b97a66;color:var(--text)}
+    .hero{height:42vh;min-height:260px;border:1px solid #d1b97a33;border-radius:14px;overflow:hidden}
+    .section-title{font-size:1.25rem;margin:18px 0;color:var(--gold);font-weight:600}
+    .badges{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:12px;margin-top:12px}
+    .badge{border:1px solid var(--border);border-radius:10px;padding:12px;display:flex;gap:10px;align-items:center;background:var(--card)}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(240px,1fr));gap:14px}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:12px;overflow:hidden;display:flex;flex-direction:column}
+    .imgwrap{width:100%;aspect-ratio:4/3;background:#0e0e10}
+    .imgwrap img{width:100%;height:100%;object-fit:cover;display:block}
+    .cardbody{padding:12px;display:flex;flex-direction:column;gap:8px}
+    .title{font-weight:600}
+    .price{display:flex;gap:8px;align-items:baseline}
+    .price .main{font-size:1.1rem}
+    .price .strike{color:#8a8a8a;text-decoration:line-through}
+    .desc{color:#c9c9c9;font-size:.92rem}
+    .actions{display:flex;gap:8px;margin-top:6px;flex-wrap:wrap}
+    .btn{flex:1;padding:10px 12px;border-radius:8px;text-align:center;font-weight:600;font-size:.95rem}
+    .btn.upi{background:var(--gold);color:#000}
+    .btn.wa{background:var(--ok);color:#fff}
+    .loading{border:1px dashed var(--border);border-radius:12px;padding:18px;text-align:center;color:#9aa0a6}
+    .empty{color:#9aa0a6}
+    .how{border:1px solid var(--border);background:var(--card);border-radius:12px;padding:16px;margin-top:18px}
+    .brand-pages{margin-top:8px;color:var(--muted);font-size:.93rem}
+    .category-header{display:flex;justify-content:space-between;align-items:center;gap:8px;margin:12px 0}
+    .category-title{font-size:1.1rem;color:var(--gold);font-weight:600}
+    .filter-bar{display:flex;gap:8px;flex-wrap:wrap}
+    .filter{border:1px solid var(--border);padding:6px 10px;border-radius:8px;cursor:pointer;color:var(--muted)}
+    .filter.active{border-color:#d1b97a66;color:var(--text)}
+    footer{border-top:1px solid var(--border)}
+    .foot{text-align:center;color:#aaa}
+    @media (max-width:640px){
+      .brand h1{font-size:1.2rem}
+      .hero{height:36vh}
+    }
+  </style>
 </head>
-
 <body>
+  <header>
+    <div class="container brand">
+      <h1>High Choice</h1>
+      <nav>
+        <a href="#home">Home</a>
+        <a href="#men">Men</a>
+        <a href="#women">Women</a>
+        <a href="#children">Children</a>
+        <a href="#policies">Policies</a>
+      </nav>
+    </div>
+  </header>
 
-<div class="header">HIGH CHOICE – PREMIUM WATCHES</div>
+  <main class="container" id="home">
+    <section class="hero">
+      <canvas id="three-canvas"></canvas>
+    </section>
 
-<div class="grid">
+    <h2 class="section-title">Original Luxury Timepieces • Handpicked • Verified • Warranty</h2>
+    <div class="badges">
+      <div class="badge"><span>✅</span><span>Verified documentation</span></div>
+      <div class="badge"><span>🛡️</span><span>Warranty included</span></div>
+      <div class="badge"><span>✨</span><span>Showroom quality</span></div>
+    </div>
 
-<!-- Rolex Example -->
-<a onclick="openProduct('rolex_submariner')">
-  <div class="card">
-    <img src="images/rolex1.png">
-    <h3>Rolex Submariner</h3>
-  </div>
-</a>
+    <div class="tabs" id="tabs">
+      <button class="tab active" data-tab="men">Men</button>
+      <button class="tab" data-tab="women">Women</button>
+      <button class="tab" data-tab="children">Children</button>
+    </div>
 
-<!-- G-Shock Example -->
-<a onclick="openProduct('gshock_ga2100')">
-  <div class="card">
-    <img src="images/gshock1.png">
-    <h3>G-Shock GA2100</h3>
-  </div>
-</a>
+    <div id="status" class="loading" style="margin-top:16px">Loading products…</div>
 
-<!-- Omega Example -->
-<a onclick="openProduct('omega_speedmaster')">
-  <div class="card">
-    <img src="images/omega1.png">
-    <h3>Omega Speedmaster</h3>
-  </div>
-</a>
+    <section id="men" style="display:block">
+      <div class="category-header">
+        <div class="category-title">Men’s Collection</div>
+        <div class="filter-bar" id="men-filters"></div>
+      </div>
+      <div class="brand-pages">Rolex • Omega • Cartier • Audemars Piguet • Patek Philippe • Rado • Longines • Tissot</div>
+      <div id="men-grid" class="grid" style="margin-top:10px"></div>
+    </section>
 
-<!-- Add more products same way -->
+    <section id="women" style="display:none">
+      <div class="category-header">
+        <div class="category-title">Women’s Collection</div>
+        <div class="filter-bar" id="women-filters"></div>
+      </div>
+      <div class="brand-pages" style="color:#ddd">Michael Kors • Dior • Versace • Just Cavalli</div>
+      <div id="women-grid" class="grid" style="margin-top:10px"></div>
+    </section>
 
-</div>
+    <section id="children" style="display:none">
+      <div class="category-header">
+        <div class="category-title">Children’s Collection</div>
+        <div class="filter-bar" id="children-filters"></div>
+      </div>
+      <div class="brand-pages" style="color:#4ef0e4">Casio • G‑Shock</div>
+      <div id="children-grid" class="grid" style="margin-top:10px"></div>
+    </section>
 
-<script>
-// Supabase init
-const supabaseUrl = "https://vkapzhbghyjzhscxsxnh.supabase.co";
-const supabaseKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZrYXB6aGJnaHlqemhzY3hzeG5oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5ODQ0MjgsImV4cCI6MjA4MDU2MDQyOH0.izm4PRrrRS7cVsP7KCQIXls12QuzBb8YCCNtKLYDIak";
+    <section id="policies" class="how">
+      <h3 style="margin:0 0 8px 0;color:var(--gold)">How it works</h3>
+      <ol>
+        <li>Browse watches by collection and brand</li>
+        <li>Choose Prepaid (UPI) or COD</li>
+        <li>Confirm order on WhatsApp</li>
+        <li>Delivery with warranty and verification</li>
+      </ol>
+    </section>
+  </main>
 
-const sb = supabase.createClient(supabaseUrl, supabaseKey);
+  <footer>
+    <div class="container foot">
+      <p>© 2025 High Choice</p>
+      <p>Luxury • Authentic • Guaranteed</p>
+    </div>
+  </footer>
 
-// openProduct → product.html + product ID
-function openProduct(pid) {
-  localStorage.setItem("product_id", pid);
-  window.location = "product.html";
-}
-</script>
+  <!-- Three.js -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
+  <!-- Supabase UMD -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.46.1/dist/umd/supabase.min.js"></script>
 
+  <script>
+    // Config — replace if needed
+    const SUPABASE_URL = "https://vkapzhbghyjzhscxsxnh.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZrYXB6aGJnaHlqemhzY3hzeG5oIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjQ5ODQ0MjgsImV4cCI6MjA4MDU2MDQyOH0.izm4PRrrRS7cVsP7KCQIXls12QuzBb8YCCNtKLYDIak";
+    const WHATSAPP_NUMBER = "917869288078"; // country code, no plus
+    const UPI_HANDLE = "7869288078@kotak811";
+
+    const supa = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
+    // Tabs
+    document.getElementById("tabs").addEventListener("click", (e) => {
+      const b = e.target.closest(".tab"); if(!b) return;
+      document.querySelectorAll(".tab").forEach(t => t.classList.remove("active"));
+      b.classList.add("active");
+      const id = b.dataset.tab;
+      ["men","women","children"].forEach(sec => {
+        document.getElementById(sec).style.display = sec === id ? "block" : "none";
+      });
+      window.location.hash = id;
+    });
+
+    // Brand filters (dynamic from data)
+    function renderBrandFilters(category, brands) {
+      const bar = document.getElementById(`${category}-filters`);
+      bar.innerHTML = "";
+      const all = document.createElement("span");
+      all.className = "filter active";
+      all.textContent = "All";
+      all.dataset.brand = "";
+      bar.appendChild(all);
+      brands.forEach(b => {
+        const el = document.createElement("span");
+        el.className = "filter";
+        el.textContent = b;
+        el.dataset.brand = b;
+        bar.appendChild(el);
+      });
+      bar.addEventListener("click", (e) => {
+        const f = e.target.closest(".filter"); if(!f) return;
+        bar.querySelectorAll(".filter").forEach(x => x.classList.remove("active"));
+        f.classList.add("active");
+        const brand = f.dataset.brand || "";
+        filterGrid(category, brand);
+      });
+    }
+
+    const state = { products: [], byCat: { men:[], women:[], children:[] }, brands: { men:[], women:[], children:[] } };
+
+    function escapeHtml(s) {
+      return String(s || "").replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c]));
+    }
+
+    function cardHtml(p) {
+      const price = p.sale_price ?? p.price;
+      const img = (Array.isArray(p.images) && p.images[0]) ? p.images[0] : "https://via.placeholder.com/600x450?text=High+Choice";
+      const waText = `Order Request (COD)
+Product: ${p.title}
+Price: ₹${price}
+Name:
+Phone:
+Address:
+City:
+Pincode:`;
+      const upi = `upi://pay?pa=${encodeURIComponent(UPI_HANDLE)}&pn=${encodeURIComponent("High Choice")}&am=${price}&cu=INR&tn=${encodeURIComponent(p.title)}`;
+      const wa = `https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent(waText)}`;
+      return `
+        <div class="card">
+          <div class="imgwrap"><img loading="lazy" src="${img}" alt="${escapeHtml(p.title)}"/></div>
+          <div class="cardbody">
+            <div class="title">${escapeHtml(p.title)}</div>
+            <div class="price">
+              <span class="main">₹${price}</span>
+              ${p.sale_price ? `<span class="strike">₹${p.price}</span>` : ""}
+            </div>
+            <div class="desc">${escapeHtml(p.description || "Premium timepiece")}</div>
+            <div class="actions">
+              <a class="btn upi" href="${upi}">Buy Prepaid (UPI)</a>
+              <a class="btn wa" href="${wa}" target="_blank" rel="noopener">Buy COD (WhatsApp)</a>
+            </div>
+          </div>
+        </div>
+      `;
+    }
+
+    function renderCategory(category) {
+      const grid = document.getElementById(`${category}-grid`);
+      const items = state.byCat[category];
+      grid.innerHTML = "";
+      if (!items || items.length === 0) {
+        const empty = document.createElement("div");
+        empty.className = "empty";
+        empty.textContent = "No products yet.";
+        grid.appendChild(empty);
+        return;
+      }
+      items.forEach(p => {
+        const div = document.createElement("div");
+        div.innerHTML = cardHtml(p);
+        grid.appendChild(div.firstElementChild);
+      });
+    }
+
+    function filterGrid(category, brand) {
+      const grid = document.getElementById(`${category}-grid`);
+      grid.innerHTML = "";
+      const source = state.byCat[category];
+      const items = brand ? source.filter(p => (p.brand || "").toLowerCase() === brand.toLowerCase()) : source;
+      if (items.length === 0) {
+        const empty = document.createElement("div"); empty.className = "empty"; empty.textContent = "No products for this brand.";
+        grid.appendChild(empty); return;
+      }
+      items.forEach(p => {
+        const div = document.createElement("div");
+        div.innerHTML = cardHtml(p);
+        grid.appendChild(div.firstElementChild);
+      });
+    }
+
+    async function loadProducts() {
+      const status = document.getElementById("status");
+      try {
+        status.textContent = "Loading products…";
+        const { data, error } = await supa
+          .from("products")
+          .select("*")
+          .eq("visible", true)
+          .eq("in_stock", true)
+          .order("created_at", { ascending: false });
+        if (error) throw error;
+
+        state.products = data || [];
+        state.byCat.men = state.products.filter(p => p.category === "men");
+        state.byCat.women = state.products.filter(p => p.category === "women");
+        state.byCat.children = state.products.filter(p => p.category === "children");
+
+        // collect brands per category
+        ["men","women","children"].forEach(cat => {
+          const set = new Set(state.byCat[cat].map(p => (p.brand || "").trim()).filter(Boolean));
+          state.brands[cat] = Array.from(set).sort();
+          renderBrandFilters(cat, state.brands[cat]);
+        });
+
+        status.style.display = "none";
+        renderCategory("men");
+        renderCategory("women");
+        renderCategory("children");
+
+        // realtime refresh on any change
+        const channel = supa.channel("public:products")
+          .on("postgres_changes", { event: "*", schema: "public", table: "products" }, async () => {
+            await loadProducts(); // simple refresh
+          })
+          .subscribe();
+      } catch (err) {
+        console.error(err);
+        status.textContent = "Error loading products. Please try again.";
+      }
+    }
+
+    // 3D hero — gold torus knot
+    (function init3D(){
+      const canvas = document.getElementById("three-canvas");
+      const scene = new THREE.Scene();
+      const camera = new THREE.PerspectiveCamera(55, 16/9, 0.1, 1000);
+      const renderer = new THREE.WebGLRenderer({ canvas, antialias: true, alpha: true });
+
+      function resize(){
+        const rect = canvas.getBoundingClientRect();
+        const w = rect.width || canvas.parentElement.clientWidth;
+        const h = canvas.parentElement.clientHeight || 300;
+        renderer.setSize(w, h, false);
+        camera.aspect = w / h;
+        camera.updateProjectionMatrix();
+      }
+      resize(); window.addEventListener("resize", resize);
+
+      const geometry = new THREE.TorusKnotGeometry(1.2, 0.35, 250, 32);
+      const material = new THREE.MeshPhysicalMaterial({
+        color: 0xd1b97a, metalness: 1, roughness: 0.2, clearcoat: 1, reflectivity: 1
+      });
+      const knot = new THREE.Mesh(geometry, material);
+      scene.add(knot);
+
+      const hemi = new THREE.HemisphereLight(0xffffff, 0x222233, 0.8);
+      scene.add(hemi);
+      const spot = new THREE.SpotLight(0xffffff, 1.4);
+      spot.position.set(4, 6, 8);
+      scene.add(spot);
+
+      camera.position.set(0, 0.2, 3.6);
+
+      const clock = new THREE.Clock();
+      function animate(){
+        requestAnimationFrame(animate);
+        const t = clock.getElapsedTime();
+        knot.rotation.x = 0.4 + Math.sin(t * 0.3) * 0.15;
+        knot.rotation.y += 0.01;
+        renderer.render(scene, camera);
+      }
+      animate();
+    })();
+
+    // Start
+    loadProducts();
+
+    // Restore tab from hash
+    const hash = window.location.hash.replace("#","");
+    if (["men","women","children"].includes(hash)) {
+      document.querySelectorAll(".tab").forEach(t => {
+        t.classList.toggle("active", t.dataset.tab === hash);
+      });
+      ["men","women","children"].forEach(sec => {
+        document.getElementById(sec).style.display = sec === hash ? "block" : "none";
+      });
+    }
+  </script>
 </body>
-</html>
+</html>                                              </html>
